working on task bar

--- a/hyperlinks.html
+++ b/hyperlinks.html
@@ -51,6 +51,7 @@
 </script>
 <h1>me.opencodespace.org/hyperlinks</h1>
 <main>
+    <a href="index.html">My Webpage</a>
     <a rel="me" href="https://wetdry.world/@withoutwyatt">Fediverse</a>
     <a href="https://matrix.to/#/@wyatt_was:matrix.org">Matrix</a>
     <a href="https://github.com/wyattwas">GitHub</a>
